name: wheresmikecraig
version: 0.0.0
license: BSD3
license-file: LICENSE.md
author: Mike Craig <mkscrg@gmail.com>
maintainer: Mike Craig <mkscrg@gmail.com>
stability: experimental
synopsis: Show my progress driving across the USA.
description:
homepage: https://github.com/mkscrg/wheresmikecraig
bug-reports: https://github.com/mkscrg/wheresmikecraig/issues
category:
build-type: Simple
cabal-version: >= 1.9.2
extra-source-files: README.md

executable recorder
  main-is: recorder/main.hs
  ghc-options: -Wall -O2
  build-depends:
    aeson,
    attoparsec,
    base,
    bson,
    bytestring,
    compact-string-fix,
    http-conduit,
    http-types,
    mongoDB,
    text,
    time,
    transformers,
    unordered-containers,
    vector,
    yaml

executable server
  main-is: server/main.hs
  ghc-options: -Wall -O2
  build-depends:
    base,
    blaze-builder,
    bytestring,
    compact-string-fix,
    conduit,
    http-types,
    mongoDB,
    wai,
    warp,
    yaml
